[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/LevelCompletePanel.gd" id="1_script"]

[node name="LevelCompletePanel" type="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Level Complete!"
horizontal_alignment = 1
custom_minimum_size = Vector2(0, 40)
theme_overrides_font_sizes/font_size = 28

[node name="TransformCountLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Transformations: 0"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Time: 0.00s"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
custom_minimum_size = Vector2(0, 40)

[node name="RetryButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Retry"
custom_minimum_size = Vector2(80, 0)

[node name="ContinueButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Continue"
custom_minimum_size = Vector2(80, 0)
